# NEST

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/grad/: 01_sftda_grad.py  02_nttda_grad.py
examples/nttda/: 01_nttda.py
examples/sftda/: 01_sftddft.py  02_sftddft_roks.py  03_spin_square_and_fosc.py  04_sftda_soc.py
examples/soc/: 01_sftda_soc.py
src/nest/: __init__.py  _lr_eig.py
src/nest/grad/: __init__.py  tduks_sf.py
src/nest/grad/nttda/: __init__.py  delta_s_minus_one.py  delta_s_plus_one.py  delta_s_zero.py  roks.py  xc.py
src/nest/grad/tests/: test_nttda_grad.py  test_tduks_sf_grad.py
src/nest/nac/: __init__.py  tduks_sf.py
src/nest/nac/tests/: test_tduks_sf.py
src/nest/nttda/: __init__.py  nttda.py
src/nest/nttda/tests/: test_nttda.py
src/nest/sftda/: __init__.py  _lr_eig.py  numint2c_sftd.py  scf_genrep_sftd.py  uhf_sf.py
src/nest/sftda/tests/: test_sftda.py  test_sftda_roks.py  test_sftddft.py  test_sftddft_roks.py
src/nest/soc/: __init__.py  sftda.py  soc.py  soc_ao.py
src/nest/soc/tests/: test_sftda_soc.py  test_sftddft_soc.py  test_soc.py  test_soc_ao.py
