[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nest"
version = "0.1.0"
description = "NEST: Noncollinear Electronic Structure Theory"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "mcfun>=0.2.6",
    "pyscf>=2.13.0",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "tests",
    "examples",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "W191",
    "W291",
    "W293",
]
ignore = [
    "E402",
    "E741",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"
